--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html>
   <head>
+    <meta charset="utf-8">
     <title> RaiderBots </title>
   </head>
+  <body>
+    <h1> RaiderBots </h1>
+
+    <div class="infodiv" id="sponsordiv">
+      <h2> Thank you to our sponsors! </h2>
+      <a class="sponsor" href="https://www.turbocam.com"> Turbocam </a>
+    </div>
+  </body>
 </html>
