Revise index.html & add CSS

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title> RaiderBots </title>
+    <link rel="stylesheet" href="https://github.com/team7674/team7674.github.io/index.css">
   </head>
   <body>
     <h1> RaiderBots </h1>
