--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
       <h2> Thank you to our sponsors! </h2>
       <a class="sponsor" href="https://www.turbocam.com"> Turbocam </a>
     </div>
+
+    <style>
+      .infodiv {
+        border-radius: 25px;
+        background-color: rgb(25, 25, 25);
+      }    
+    </style>
   </body>
 </html>
