revise index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       .infodiv {
         border-radius: 25px;
         background-color: rgb(25, 25, 25);
-      }    
+      }
+
+      .infodiv h1 {
+        color: rgb(200, 200, 200);
+      }
     </style>
   </body>
 </html>
