--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title> RaiderBots </title>
-    <link rel="stylesheet" href="https://github.com/team7674/team7674.github.io/index.css">
+    <link rel="icon" type="image/x-icon" href="https://team7674.github.io/favicon.ico">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
