--- a/index.html
+++ b/index.html
@@ -9,8 +9,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
+    <div class="topnav">
+      <a href="" class="navitem" id="navcur"> Home </a>
+      <a href="" class="navitem"> Not Home </a>
+    </div>
+
     <h1 id="Title"> RaiderBots </h1>
 
     <div class="infodiv" id="sponsordiv">
@@ -88,6 +96,52 @@
         font-weight: 700;
         font-style: normal;
       }
+
+      body {
+        overflow-x: hidden;
+    }
+
+    .topnav {
+        padding: 10px 0px 10px 10px;
+        background-color: black;
+        overflow: hidden;
+        margin-top: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    .topnav a {
+        color: rgb(200, 200, 200);
+        padding: 5px 5px 12px 5px;
+        border-radius: 10px 10px 0px 0px;
+        background-color: rgb(50, 50, 50);
+        font-family: "Work Sans", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 400;
+        font-style: normal;
+        text-decoration: solid;
+    }
+
+    .topnav .navitem {
+
+    }
+
+    .topnav #navcur {
+        background-color: #d90429;
+        color: rgb(200, 200, 200);
+    }
+
+    .topnav .navitem :hover {
+
+    }
+
+    .topnav #navcur :hover {
+
+    }
     </style>
   </body>
 </html>
